Bug Fixes +Fixed scaling for different maps +Fixed maps not being added to the tree view upon being added to project New bug has emerged, when creating a marker it seems to jump to a random point upon creation. This isn't consistent between maps, will need to see what's causing it.

--- a/src/main/resources/org/jammor9/mappointeditor/css/main.css
+++ b/src/main/resources/org/jammor9/mappointeditor/css/main.css
@@ -42,6 +42,7 @@
 }
 
 .text-field {
+    -fx-prompt-text-fill: derive(white,-30%);
     -fx-text-fill: white;
 }
 
